--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 </head>
 <body>
   <header>
-    <h1>Кинолог в Зеленограде и области</h1>
-    <div class="cities">Зеленоград · Солнечногорск · Голубое</div>
-    <p>Дрессировка | Консультации | Груминг<br>Профессиональный подход к вашему питомцу</p>
+    <h1>Кинолог в Зеленограде</h1>
+    <div class="red">Зеленоград · Солнечногорск · Голубое</div>
+    <p>Дрессировка | Консультации | Груминг<br>Профессиональный подход к Вам и вашему питомцу</p>
   </header>
   <nav>
     <a href="#main">Главная</a>
@@ -92,14 +92,15 @@
 
     <section id="contact" class="contact-block">
       <h2>Записаться на услугу</h2>
-      <form class="contact-form">
+      <form class="contact-form" method="POST" action="https://formspree.io/f/mzzybyle">
         <input type="text" name="name" placeholder="Ваше имя" required>
         <input type="tel" name="phone" placeholder="Телефон для связи" required>
-        <textarea name="message" rows="3" placeholder="Какая услуга вас интересует?"></textarea>
+        <textarea name="message" rows="3" placeholder="Какая услуга вас интересует? Какая порода собаки? Желаемый город для проведения занятий."></textarea>
         <button class="button" type="submit">Отправить заявку</button>
       </form>
       <div style="margin-top:9px;color:#666;font-size:1em;">
         Или звоните/пишите: <b>+7 977 682-71-47</b>
+Telegram, WhatsApp
       </div>
     </section>
   </main>
