--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Кинолог Зеленоград – Дрессировка, Консультации, Груминг</title>
   <style>
-    body { margin: 0; font-family: 'Segoe UI', Arial, sans-serif; background: #f5f6fa; color: #222;}
-    header, nav, main, footer { max-width: 1100px; margin: auto; }
+    body { margin: 0;
+  font-family: 'Segoe UI', Arial, sans-serif;
+  background: url('wavey-fingerprint.svg') repeat;
+  background-size: cover;
+  color: #222;
+  transition: background-position 0.3s;
+}   header, nav, main, footer { max-width: 1100px; margin: auto; }
     header { background: #363f6e; color: #fff; padding: 40px 0 20px 0; text-align: center;}
     nav { display: flex; gap: 24px; justify-content: center; margin: 18px 0; }
     nav a { text-decoration: none; color: #363f6e; font-weight: bold; transition: color 0.3s;}
@@ -140,5 +145,12 @@ Telegram, WhatsApp
         });
     });
   </script>
+  <script>
+window.addEventListener('scroll', function() {
+  const x = window.scrollY;
+  document.body.style.backgroundPosition = `${y/5}px ${y/7}px`;
+});
+</script>
+
 </body>
 </html>
