--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Кинолог ZSG — Индивидуальный подход. Зеленоград, Солнечногорск, Голубое</title>
+  <title>Кинолог Виктория — Индивидуальный подход. Зеленоград, Солнечногорск, Голубое</title>
   <!-- Стили для оформления сайта. Все объяснения ниже в комментариях -->
   <style>
     /* Общие настройки для body (фон, шрифт, цвет текста) */
@@ -148,6 +148,9 @@
         align-items: center;
       }
     }
+	#about h2, #services h2, #record h2 {
+  text-align: center;
+}
   </style>
 </head>
 <body>
@@ -155,7 +158,7 @@
   <div class="bg-image"></div>
   <!-- Шапка сайта: название и меню -->
   <header>
-    <h1>Кинолог ZSG</h1>
+    <h1>Кинолог Виктория</h1>
     <nav>
       <a href="#about">О себе</a>
       <a href="#services">Услуги</a>
@@ -177,7 +180,7 @@
 
     <!-- Блок с популярными услугами (карточки) -->
     <section id="services">
-      <h2>Популярные услуги</h2>
+      <h2 style="text-align:center;">Популярные услуги</h2>
       <div class="services-grid">
         <!-- Карточка: дрессировка -->
         <div class="service-card">
@@ -234,7 +237,7 @@
   </main>
   <!-- Футер с контактной информацией и регионами работы -->
   <footer id="contacts">
-    <span>© 2025 Кинологический центр ZSG. Зеленоград — Солнечногорск — Голубое</span>
+    <span>© 2025 Кинолог Виктория. Зеленоград — Солнечногорск — Голубое</span>
   </footer>
 </body>
 </html>
