--- a/index.html
+++ b/index.html
@@ -214,6 +214,10 @@
       <a href="#record">Записаться</a>
       <a href="#contacts">Контакты</a>
     </nav>
+	<div style="text-align:center;margin:24px 0;">
+  <a href="articles.html" class="button" style="font-size:1.1em;display:inline-block;">Руководства и статьи</a>
+</div>
+
   </header>
   <main>
     <!-- Блок "О себе" с основными сведениями об авторе -->
