--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
     <div class="gallery-grid">
       <img src="dog-gallery-1.jpg" alt="Тренировка собаки">
       <img src="dog-gallery-2.jpg" alt="Счастливая собака и владелец">
-      <img src="dog-gallery-3.jpg" alt="До и после коррекции поведения">
+      <img src="dog-gallery-3.jpg" alt="До и после грумминга">
       <img src="dog-gallery-4.jpg" alt="Воспитанная собака на улице">
     </div>
   </section>
