--- a/index.html
+++ b/index.html
@@ -472,6 +472,8 @@
   </section>
 
   <!-- Form -->
+   <iframe src="https://forms.yandex.ru/s/ваша_ссылка_на_форму" frameborder="0"></iframe>
+
   <section id="form" class="form-section">
     <div class="form-card">
       <div class="form-title center">Запишитесь на консультацию</div>
